fix: left nav styles for dark mode

--- a/packages/gatsby-theme-carbon/src/components/LeftNav/LeftNav.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/LeftNav/LeftNav.module.scss
@@ -23,6 +23,7 @@
   flex: 0;
 }
 
+/* stylelint-disable */
 // Padding overrides for top level menu items
 :global {
   .bx--side-nav__items > .bx--side-nav__item > .bx--side-nav__link span {
@@ -30,6 +31,26 @@
   }
   .bx--side-nav__items > .bx--side-nav__item > .bx--side-nav__submenu span {
     padding-left: 0 !important;
+  }
+
+  //dark
+  .bx--side-nav--website--dark
+    .bx--side-nav__menu[role='menu']
+    a.bx--side-nav__link--current,
+  .bx--side-nav__menu[role='menu'] a.bx--side-nav__link[aria-current='page'],
+  a.bx--side-nav__link--current {
+    background-color: #282828 !important;
+  }
+
+  .bx--side-nav--website--dark
+    .bx--side-nav__item:not(.bx--side-nav__item--active)
+    > .bx--side-nav__link:hover
+    > span,
+  .bx--side-nav__item:not(.bx--side-nav__item--active)
+    .bx--side-nav__menu-item
+    > .bx--side-nav__link:hover
+    > span {
+    color: $carbon--white-0 !important;
   }
 }
 
@@ -40,12 +61,4 @@
 
 .link-text__active {
   color: #171717;
-}
-
-.link-text__homepage {
-  &:hover {
-    :global(.bx--side-nav__link-text) {
-      color: #f3f3f3 !important;
-    }
-  }
 }
